[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-obsidian-local-graph"
version = "0.1.0"
dependencies = [
    "mkdocs>=1.5.0",
]

[project.entry-points."mkdocs.plugins"]
obsidian-local-graph = "plugins.obsidian_graph:ObsidianInteractiveGraphPlugin"

# --- ADD THIS SECTION BELOW ---
[tool.setuptools]
packages = ["plugins"]